Mengganti gambar PNG ke JPEG

--- a/portofolio.html
+++ b/portofolio.html
@@ -177,7 +177,7 @@
 
     <div class="projek-container">
         <div class="projek-item">
-            <img src="getede.jpeg" alt="Projek 1" class="all">
+            <img src="getede.png" alt="Projek 1" class="all">
             <h4 class="gtd">Girls Tech Day</h4>
             <h7>This was a city-wide event for girls where we were required to program a robot so that it could detect items using a sensor system.  </h7>
         </div>
@@ -237,7 +237,7 @@
     
                 <!-- Baris kedua: 3 gambar -->
                 <div class="skill-itembe">
-                    <img src="php.png" alt="php">
+                    <img src="php.jpeg" alt="php">
                     <p>PHP</p>
                 </div>
                
